# fetch_rewards

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: python-app.yml  run-pytest.yml
app/: main.py
app/api/endpoints/: receipts.py
app/schemas/: receipt.py
app/services/: in_memory_db.py  receipt_service.py
app/tests/: test_receipts.py
docs/: app.api.endpoints.rst  app.rst  app.schemas.rst  app.services.rst  app.tests.rst  conf.py  index.rst  modules.rst
