[tool.poetry]
name = "fetch-rewards"
version = "0.1.0"
description = ""
authors = ["Josh Jarabek <josh@parakeet.ventures>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
pydantic = "^2.10.1"
uvicorn = "^0.32.1"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"
pytest = "^8.3.3"
httpx = "^0.27.2"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
ruff = "^0.8.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
